--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <title>Mon portfolio</title>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    name="description"
+    content="Développeuse Front-End, bilingue, curieuse et créative"
+  />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    
+    <meta property="og:title" content="Julie Bourel-Drapier, développeuse Front-End dans la métropole lilloise">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="./assets/computer.jpg">
+    <meta property="og:url" content="https://github.com/JulieBourelDrapier/portfolio.git">
+    <meta property="og:description" content="Julie Bourel-Drapier développeuse Front : HTML5, CCS3, JS et React">
+
+    <meta name="theme-color" content="#000000" />
+  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
